--- a/pandasBasics.ipynb
+++ b/pandasBasics.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0cd1d7cb",
    "metadata": {},
    "outputs": [
@@ -339,13 +339,13 @@
     }
    ],
    "source": [
-    "# multiple values throughiloc\n",
+    "# multiple values through iloc\n",
     "s.iloc[[1,3,4]]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "fc241c5d",
    "metadata": {},
    "outputs": [
@@ -428,12 +428,14 @@
    "id": "cada7083",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "calories['apple']"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -447,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
