--- a/datacleaning.ipynb
+++ b/datacleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "id": "3639e1b0",
    "metadata": {},
    "outputs": [],
@@ -13,22 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "id": "7d314a3f",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = {\n",
-    "    \"Name\": ['Iyynes', 'Adithya', 'Deepa', 'Muthu', 'Sri', 'Gobika', np.nan],\n",
-    "    \"Age\": [20, 15, 18, np.nan, 19, 18, np.nan],\n",
-    "    \"Department\": ['Full-stack', np.nan, 'UI/UX', 'Backend', 'Frontend', 'AI', np.nan],\n",
-    "    \"Salary\": [90000, 70000, 80000, 90000, np.nan, 55000, np.nan]\n",
+    "    \"Name\": ['Iyynes', 'Adithya', 'Deepa', 'Muthu', 'Sri', 'Gobika', np.nan, 'Iyynes'],\n",
+    "    \"Age\": [20, 15, 18, np.nan, 19, 18, np.nan, 20],\n",
+    "    \"Department\": ['Full-stack', np.nan, 'UI/UX', 'Backend', 'Frontend', 'AI', np.nan, 'Full-stack'],\n",
+    "    \"Salary\": [90000, 70000, 80000, 90000, np.nan, 55000, np.nan, 90000]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "id": "0275fd7b",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,8 @@
       "3    Muthu   NaN     Backend  90000.0         105000.0\n",
       "4      Sri  19.0    Frontend      NaN              NaN\n",
       "5   Gobika  18.0          AI  55000.0          70000.0\n",
-      "6      NaN   NaN         NaN      NaN              NaN\n"
+      "6      NaN   NaN         NaN      NaN              NaN\n",
+      "7   Iyynes  20.0  Full-stack  90000.0         105000.0\n"
      ]
     }
    ],
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "id": "ebcb9aed",
    "metadata": {},
    "outputs": [
@@ -73,7 +74,8 @@
       "3  False   True       False   False            False\n",
       "4  False  False       False    True             True\n",
       "5  False  False       False   False            False\n",
-      "6   True   True        True    True             True\n"
+      "6   True   True        True    True             True\n",
+      "7  False  False       False   False            False\n"
      ]
     }
    ],
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "id": "4dd3f07a",
    "metadata": {},
    "outputs": [
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "id": "a0e23b63",
    "metadata": {},
    "outputs": [
@@ -124,7 +126,8 @@
       "      Name   Age  Department   Salary  Promoted Salary\n",
       "0  Iyynes  20.0  Full-stack  90000.0         105000.0\n",
       "2   Deepa  18.0       UI/UX  80000.0          95000.0\n",
-      "5  Gobika  18.0          AI  55000.0          70000.0\n"
+      "5  Gobika  18.0          AI  55000.0          70000.0\n",
+      "7  Iyynes  20.0  Full-stack  90000.0         105000.0\n"
      ]
     }
    ],
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "id": "103fc4b4",
    "metadata": {},
    "outputs": [
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "id": "39da5ab7",
    "metadata": {},
    "outputs": [
@@ -241,6 +244,14 @@
        "      <td>55000.0</td>\n",
        "      <td>70000.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Iyynes</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Full-stack</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>105000.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -252,10 +263,11 @@
        "2    Deepa  18.0       UI/UX  80000.0          95000.0\n",
        "3    Muthu   0.0     Backend  90000.0         105000.0\n",
        "4      Sri  19.0    Frontend      0.0              0.0\n",
-       "5   Gobika  18.0          AI  55000.0          70000.0"
+       "5   Gobika  18.0          AI  55000.0          70000.0\n",
+       "7   Iyynes  20.0  Full-stack  90000.0         105000.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 41,
    "id": "b499522c",
    "metadata": {},
    "outputs": [
@@ -275,12 +287,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    20.0\n",
-      "1    15.0\n",
-      "2    18.0\n",
-      "3    18.0\n",
-      "4    19.0\n",
-      "5    18.0\n",
+      "0    20.000000\n",
+      "1    15.000000\n",
+      "2    18.000000\n",
+      "3    18.333333\n",
+      "4    19.000000\n",
+      "5    18.000000\n",
+      "7    20.000000\n",
       "Name: Age, dtype: float64\n"
      ]
     }
@@ -293,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "id": "24a3e04d",
    "metadata": {},
    "outputs": [
@@ -303,11 +316,12 @@
      "text": [
       "   Department   Salary\n",
       "0  Full-stack  90000.0\n",
-      "1          AI  70000.0\n",
+      "1  Full-stack  70000.0\n",
       "2       UI/UX  80000.0\n",
       "3     Backend  90000.0\n",
       "4    Frontend  90000.0\n",
-      "5          AI  55000.0\n"
+      "5          AI  55000.0\n",
+      "7  Full-stack  90000.0\n"
      ]
     }
    ],
@@ -319,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 43,
    "id": "bb63776a",
    "metadata": {},
    "outputs": [
@@ -333,6 +347,7 @@
       "3    18.0\n",
       "4    19.0\n",
       "5    18.0\n",
+      "7    20.0\n",
       "Name: Age, dtype: float64\n",
       "0    20.0\n",
       "1    15.0\n",
@@ -340,6 +355,7 @@
       "3    18.0\n",
       "4    19.0\n",
       "5    18.0\n",
+      "7    20.0\n",
       "Name: Age, dtype: float64\n"
      ]
     },
@@ -347,7 +363,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pdee5\\AppData\\Local\\Temp\\ipykernel_17252\\884371068.py:3: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\pdee5\\AppData\\Local\\Temp\\ipykernel_12928\\884371068.py:3: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  print(df['Age'].fillna(method = 'ffill'))\n"
      ]
     }
@@ -362,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 44,
    "id": "9c2b9404",
    "metadata": {},
    "outputs": [
@@ -376,6 +392,7 @@
       "3    19.0\n",
       "4    19.0\n",
       "5    18.0\n",
+      "7    20.0\n",
       "Name: Age, dtype: float64\n",
       "0    20.0\n",
       "1    15.0\n",
@@ -383,6 +400,7 @@
       "3    19.0\n",
       "4    19.0\n",
       "5    18.0\n",
+      "7    20.0\n",
       "Name: Age, dtype: float64\n"
      ]
     },
@@ -390,7 +408,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pdee5\\AppData\\Local\\Temp\\ipykernel_17252\\4185171809.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\pdee5\\AppData\\Local\\Temp\\ipykernel_12928\\1812506628.py:6: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  print(df['Age'].fillna(method = 'bfill'))\n"
      ]
     }
@@ -406,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "id": "976e3959",
    "metadata": {},
    "outputs": [],
@@ -417,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "5a04b24b",
    "metadata": {},
    "outputs": [
@@ -433,6 +451,7 @@
       "3      Muthu\n",
       "4        Sri\n",
       "5     Gobika\n",
+      "7     Iyynes\n",
       "Name: Name, dtype: object\n",
       "\n",
       " dataset with replaced value \n",
@@ -442,6 +461,7 @@
       "3      Muthu\n",
       "4    Srindhi\n",
       "5     Gobika\n",
+      "7     Iyynes\n",
       "Name: Name, dtype: object\n"
      ]
     }
@@ -455,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "9d91ffe6",
    "metadata": {},
    "outputs": [
@@ -500,7 +520,7 @@
        "      <th>1</th>\n",
        "      <td>Adithya</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>AI</td>\n",
+       "      <td>Full-stack</td>\n",
        "      <td>70000.0</td>\n",
        "      <td>85000.0</td>\n",
        "    </tr>\n",
@@ -522,7 +542,204 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Srindhi</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Frontend</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Gobika</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>70000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Iyynes</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Full-stack</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>105000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name   Age  Department   Salary  Promoted Salary\n",
+       "0   Iyynes  20.0  Full-stack  90000.0         105000.0\n",
+       "1  Adithya  15.0  Full-stack  70000.0          85000.0\n",
+       "2    Deepa  18.0       UI/UX  80000.0          95000.0\n",
+       "3    Muthu   NaN     Backend  90000.0         105000.0\n",
+       "4  unknown  19.0    Frontend  90000.0              NaN\n",
+       "5   Gobika  18.0          AI  55000.0          70000.0\n",
+       "7   Iyynes  20.0  Full-stack  90000.0         105000.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to make the change permanent:\n",
+    "df['Name'] = df['Name'].replace(\"Sri\", \"unknown\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "aefdf27e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Promoted Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Iyynes</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Full-stack</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>105000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Iyynes</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Full-stack</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>105000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Name   Age  Department   Salary  Promoted Salary\n",
+       "0  Iyynes  20.0  Full-stack  90000.0         105000.0\n",
+       "7  Iyynes  20.0  Full-stack  90000.0         105000.0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df_dup = df[df.duplicated()]\n",
+    "\n",
+    "# first : Mark duplicates as True except for the first occurrence.\n",
+    "df_dup = df[df.duplicated(keep='first')]\n",
+    "\n",
+    "# last : Mark duplicates as True except for the last occurrence.\n",
+    "df_dup = df[df.duplicated(keep='last')]\n",
+    "\n",
+    "# False : Mark all duplicates as True.\n",
+    "df_dup = df[df.duplicated(keep=False)]\n",
+    "df_dup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "837b32fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Promoted Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Iyynes</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Full-stack</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>105000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adithya</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>Full-stack</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>85000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Deepa</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>UI/UX</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>95000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Muthu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Backend</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>105000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>unknown</td>\n",
        "      <td>19.0</td>\n",
        "      <td>Frontend</td>\n",
        "      <td>90000.0</td>\n",
@@ -543,21 +760,20 @@
       "text/plain": [
        "      Name   Age  Department   Salary  Promoted Salary\n",
        "0   Iyynes  20.0  Full-stack  90000.0         105000.0\n",
-       "1  Adithya  15.0          AI  70000.0          85000.0\n",
+       "1  Adithya  15.0  Full-stack  70000.0          85000.0\n",
        "2    Deepa  18.0       UI/UX  80000.0          95000.0\n",
        "3    Muthu   NaN     Backend  90000.0         105000.0\n",
-       "4  Srindhi  19.0    Frontend  90000.0              NaN\n",
+       "4  unknown  19.0    Frontend  90000.0              NaN\n",
        "5   Gobika  18.0          AI  55000.0          70000.0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# to make the change permanent:\n",
-    "df['Name'] = df['Name'].replace(\"Sri\", \"Srindhi\")\n",
+    "df.drop_duplicates(inplace=True)\n",
     "df"
    ]
   }
